# fairy_tales_backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE.txt  README.md  alembic.ini  pyproject.toml  run.py  setup.cfg  test_streaming.py
.claude/: settings.local.json
.github/workflows/: deploy_to_cloudrun.yml  docker_build_push_google.yml  run_tests.yml
.taskmaster/: state.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: tasks.json
alembic/: env.py
alembic/versions/: 04d8709b493c_add_is_deleted_to_heroes.py  1e754f2c9b28_create_story_heroes_junction_table.py  20df1c85b34a_add_series_table_and_series_id_to_.py  3ea74b4c5644_add_user_onboarding_progress_table.py  4e83abfd03dd_add_hero_ids_array_to_stories.py  883573ac5f55_init.py  89aaf511baaa_remove_is_deleted_field_from_heroes.py  928a9598cb30_heros.py  964b4789fc6f_init.py  b4b48f1eec3b_base.py  c55ada0b7e26_initial_migration.py  c9a1edca4653_add_story_fields.py  d25e1e1057a2_remove_hero_fields_from_stories.py  ffe6d75c3f97_add_performance_indexes.py
app/: main.py  privacy-policy.md  terms-of-use.md
app/core/: configs.py  consts.py  error_codes.py  responses.py
app/crud/: __init__.py  hero.py  series.py  story.py  user.py  user_onboarding.py
app/db/: base_classes.py  db_sessions.py
docker/: Dockerfile  docker-compose.yml
docs/: alembic.md  api_endpoints.md  apple_signin_setup.md  common_information.md  db_description.md  docker.md  endpoints_admin.md  endpoints_barista.md  openai_health_monitoring.md  pre-commit.md  pytest.md  streaming_api_examples.md  technologies.md
(+38 files in other folders)
